# 2022-Team-layer

./: CMakeLists.txt  classes.names  main.cpp
include/: camera.h  yolo.h
src/: camera.cpp  yolo.cpp
